new proj/src/objects/GE_ES_Commerical_Finance_Checklist_PL__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Ext_Links__c</fullName>
        <label>External Links</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_ES_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Owner_Role__c</fullName>
        <label>Owner Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_PL__c</fullName>
        <label>P&amp;L</label>
        <referenceTo>GE_ES_PL__c</referenceTo>
        <relationshipLabel>Commerical/Finance Checklist - PLs</relationshipLabel>
        <relationshipName>Commerical_Finance_Checklist_PLs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_ES_R_Status__c</fullName>
        <label>R Status</label>
        <picklist>
            <picklistValues>
                <fullName>R0/R1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Task__c</fullName>
        <label>Task</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commerical_Finance_Checklist_PLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Commerical/Finance Checklist - PL</label>
    <nameField>
        <displayFormat>CFC-{000}</displayFormat>
        <label>Commerical/Finance Checklist #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commerical/Finance Checklist - PLs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>